Add USDR and WA publishers to API upstreams (#91)
* WA Publisher now actually publishes addresses

Fixed a missing set statement that was causing the Location field to be empty.
Also added missing Slot resource ID

* We're now successfully pulling WA data from the publisher.

There are some instances where validation fails, but we're now continuing, printing the error and continuing.

* Add upstreams to Heroku config

* Fix failing Mock Service Test and update Publisher Request URL

Fixed failing test that wasn't updated to check for VaccineLocations
Fixed relative URL in WA Publisher bulk-publish response.